--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,28 @@
 body
 {
-    color: black;
-    background-color: rgba(26, 171, 159, 0.62);
+    color: rgba(29, 232, 83, 0.797);
+    background-color: rgba(0, 0, 0, 0.75);
     text-align: center;
     font-family: Arial;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 h1 
 {
     color: rgb(255, 248, 248);
-    -webkit-text-stroke : .5px black;
+    -webkit-text-stroke : .5px rgb(222, 14, 149);
+    font-size:20px;
+    
 }
+
+
+
+#container
+    {width:70%;
+    padding:1em;
+    text-align:left;
+    border:1px solid #ddd;
+    margin:0 auto}
+
