agregado el contenido al blog, y arruinando la tipografia :D

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body
     color: rgba(29, 232, 83, 0.797);
     background-color: rgba(0, 0, 0, 0.75);
     text-align: center;
-    font-family: Arial;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     margin: 0;
     padding: 0;
