--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: rgba(0, 0, 0, 0.58);
+    color: rgb(235, 235, 235);
   
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
