agregando modificaciones al footer

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,7 +52,21 @@ body
         
     }
 
-    #post
+    
     {
         padding: 1em;
+    }
+
+
+
+
+
+    
+    #suscribete
+    {
+        color: #b4292c;
+        background: #b4292b60;
+        text-align: center;
+        padding: 0.5em;
+        
     }
