--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,11 +68,10 @@ body
         padding: 1em;
     }
 
-    #suscribete
-    {
+#container #suscribete
+{
         color: #b4292c;
         background: #b4292b60;
         text-align: center;
         padding: 0.5em;
-        
-    }
+}
