--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,4 +74,5 @@ body
         background: #b4292b60;
         text-align: center;
         padding: 0.5em;
+        -webkit-text-stroke : .2px rgba(0, 0, 0, 0.797);
 }
